--- a/devsnest/app/views/gbu_mailer/reminder.html.erb
+++ b/devsnest/app/views/gbu_mailer/reminder.html.erb
@@ -1,5 +1,6 @@
 <h1>Gbu#reminder</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/gbu_mailer/reminder.html.erb
+   Hey, Today is Sunday. Time for you to fill your gbu.
 </p>
+
