--- a/devsnest/app/views/gbu_mailer/reminder.text.erb
+++ b/devsnest/app/views/gbu_mailer/reminder.text.erb
@@ -1,3 +1,4 @@
 Gbu#reminder
 
-<%= @greeting %>, find me in app/views/gbu_mailer/reminder.text.erb
+Hey, Today is Sunday. Time for you to fill your gbu
+# <%= @greeting %>, find me in app/views/gbu_mailer/reminder.text.erb
