--- a/devsnest/app/views/gbu_mailer/reminder.html.erb
+++ b/devsnest/app/views/gbu_mailer/reminder.html.erb
@@ -1,6 +1,6 @@
-<h1>Gbu#reminder</h1>
+<h1>Gbu_reminder</h1>
 
 <p>
-   Hey, Today is Sunday. Time for you to fill your gbu.
+   <%= @greeting %>, Today is Sunday. Time for you to fill your gbu.
 </p>
 
