--- a/devsnest/app/views/gbu_mailer/reminder.text.erb
+++ b/devsnest/app/views/gbu_mailer/reminder.text.erb
@@ -1,4 +1,4 @@
-Gbu#reminder
+Gbu_reminder
 
-Hey, Today is Sunday. Time for you to fill your gbu
-# <%= @greeting %>, find me in app/views/gbu_mailer/reminder.text.erb
+Hlo, Today is Sunday. Time for you to fill your gbu
+<%= @greeting %>, find me in app/views/gbu_mailer/reminder.text.erb
