Gbu mail reminder

--- a/devsnest/app/views/gbu_mailer/reminder.html.erb
+++ b/devsnest/app/views/gbu_mailer/reminder.html.erb
@@ -1,6 +1,8 @@
-<h1>Gbu_reminder</h1>
-  <h4>Hola Amigo,</h4>
+<h3>Hola Amigo,</h3>
 <p>
-    Today is Sunday. Time for you to fill your gbu.
+    Hope you had an exciting week. So, time for you to analyze your week and fill your GBU at <a href="https://devsnest.in/"> devsnest.in</a> .<br>
+    <br>
+    Regards<br>
+    Devsnest
 </p>
 
